CMakeLists.txt: Remove header from the library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,7 @@ if (BUILD_DELAUNAY_DEMO)
 endif()
 
 
-add_library(delaunay INTERFACE
-    include/Delaunay.hpp
-)
+add_library(delaunay INTERFACE)
 
 target_include_directories(delaunay
     INTERFACE
